# resume

./: .gitignore  Pipfile  README.md  app.py  deploy.py  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  run.py  start.sh
src/: App.vue
