[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-website"
version = "1.0.0"
description = "Personal resume website built with Vue.js and Flask"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.3.3",
    "Werkzeug==2.3.7"
] 